--- a/res/menu/menu_main.xml
+++ b/res/menu/menu_main.xml
@@ -7,8 +7,15 @@
         android:title="@string/action_settings"/>
     <item
         android:id="@+id/playball"
+        android:title="@string/play_ball"
+        android:icon="@drawable/ic_menu_bball"
+        android:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/scout"
         android:title="@string/your_scout"
         android:icon="@drawable/ic_menu_scout"
         android:showAsAction="ifRoom" />
+    
+
 
 </menu>
