--- a/res/layout/layout_play_ball_game_stats_edit.xml
+++ b/res/layout/layout_play_ball_game_stats_edit.xml
@@ -679,4 +679,20 @@
         </LinearLayout>
     </ScrollView>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:padding="8dp" >
+
+        <Button
+            android:id="@+id/save_button"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="saveStats"
+            android:text="@string/save" />
+
+    </FrameLayout>
+
 </LinearLayout>
