--- a/res/menu/edit_game.xml
+++ b/res/menu/edit_game.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+	
+    <item
+        android:id="@+id/game_complete"
+        android:title="@string/done"
+        android:icon="@drawable/ic_menu_done"
+        android:showAsAction="ifRoom" />
 </menu>
