--- a/res/menu/menu_main.xml
+++ b/res/menu/menu_main.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/about"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/about"/>
     <item
         android:id="@+id/playball"
         android:title="@string/play_ball"
