--- a/res/menu/scout.xml
+++ b/res/menu/scout.xml
@@ -5,5 +5,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item
+        android:id="@+id/save_scout"
+        android:title="@string/save"
+        android:icon="@drawable/ic_menu_save"
+        android:showAsAction="ifRoom" />
 
 </menu>
