--- a/res/layout/game_edit.xml
+++ b/res/layout/game_edit.xml
@@ -311,9 +311,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:background="@color/Cornsilk"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:text="@string/zero"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/WhiteSmoke"
+            android:textColor="@color/cornsilk"
             android:textSize="40sp" />
 
     </TableRow>
