--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -1,12 +1,135 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="25dp"
     tools:context=".GLS_Act_main" >
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+    </LinearLayout>
+
+    <TableRow
+        android:id="@+id/trow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_gravity="center_horizontal" >
 
-</RelativeLayout>
+        
+
+        <TextView
+            android:id="@+id/upload_gamestats"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/Orange"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/upload_gamestats"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="14sp" />
+        
+        <TextView
+            android:id="@+id/statline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/Orange"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/statline"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textSize="14sp" />
+
+    </TableRow>
+
+    <FrameLayout
+        android:id="@+id/framer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cornsilk"
+        android:padding="10dp" >
+
+        <TableRow
+            android:id="@+id/sline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal" >
+
+            <TextView
+                android:id="@+id/dis_games"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/zero"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/WhiteSmoke"
+                android:textSize="40sp" />
+
+            <TextView
+                android:id="@+id/lab_gms"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/gms"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="@color/WhiteSmoke" />
+
+            <TextView
+                android:id="@+id/dis_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="@string/zero"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="40sp" />
+
+            <TextView
+                android:id="@+id/lab_pts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/pts"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/dis_rebounds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="@string/zero"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="40sp" />
+
+            <TextView
+                android:id="@+id/lab_rebs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/rebs"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <TextView
+                android:id="@+id/dis_assists"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="@string/zero"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="40sp" />
+
+            <TextView
+                android:id="@+id/lab_asts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/ast"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </TableRow>
+    </FrameLayout>
+
+</LinearLayout>
