--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -3,6 +3,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/centered"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="25dp"
@@ -52,6 +53,7 @@
         android:id="@+id/framer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:background="@color/cornsilk"
         android:padding="10dp" >
 
@@ -132,7 +134,34 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
     </FrameLayout>
-    
+
+    <LinearLayout
+        android:id="@+id/last_child"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gls_blue"
+        android:orientation="vertical"
+        android:padding="10dp" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="@string/brand_name"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/White" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="@string/by_gls"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/gls_com"
         android:layout_width="wrap_content"
