layout updates.. backgrounds are orange

--- a/res/layout/activity_scout.xml
+++ b/res/layout/activity_scout.xml
@@ -3,6 +3,7 @@
     android:id="@+id/scout_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Orange"
     android:orientation="vertical"
     android:padding="15dp" >
 
@@ -112,7 +113,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
+                android:background="@android:drawable/btn_default"
                 android:text="@string/edit" />
+
         </RelativeLayout>
     </ScrollView>
 
