--- a/res/layout/avg_totals.xml
+++ b/res/layout/avg_totals.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollAVG"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/Orange" >
 
     <RelativeLayout
         android:layout_width="match_parent"
