adding game count to game by game and cleaning up some code.

--- a/res/layout/game_by_game.xml
+++ b/res/layout/game_by_game.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cornsilk"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="10dp" >
 
     <LinearLayout
         android:id="@+id/stat_box"
@@ -221,5 +222,13 @@
             android:drawableRight="@drawable/button_last" />
 
     </TableRow>
+
+    <TextView
+        android:id="@+id/game_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/zero"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
